--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
 <body>
     <span>JavaScript</span>
     <div class="container">
-        <a href="Sop1,1.html" width="40%" alt=""><button>SOP 1,1</button></a><br>
-        <a href="Sop1,2.html" width="40%" alt=""><button>SOP 1,2</button></a><br>
-        <a href="Sop1,3.html" width="40%" alt=""><button>SOP 1,3</button></a><br>
-        <a href="Sop2,1.html" width="40%" alt=""><button>SOP 2,1</button></a><br>
-        <a href="Sop2,2.html" width="40%" alt=""><button>SOP 2,2</button></a><br>
-        <a href="Sop2,3.html" width="40%" alt=""><button>SOP 2,3</button></a><br>
-        <a href="Sop3,1.html" width="40%" alt=""><button>SOP 3,1</button></a><br>
-        <a href="Sop3,2.html" width="40%" alt=""><button>SOP 3,2</button></a><br>
-        <a href="Sop3,3.html" width="40%" alt=""><button>SOP 3,3</button></a><br>
+        <a href="https://sanaullah2005.github.io/Sop1-1/" width="40%" alt=""><button>SOP 1,1</button></a><br>
+        <a href="https://sanaullah2005.github.io/Sop1-2/" width="40%" alt=""><button>SOP 1,2</button></a><br>
+        <a href="https://sanaullah2005.github.io/Sop1-3/" width="40%" alt=""><button>SOP 1,3</button></a><br>
+        <a href="https://sanaullah2005.github.io/Sop2-1/" width="40%" alt=""><button>SOP 2,1</button></a><br>
+        <a href="https://sanaullah2005.github.io/Sop2-2/" width="40%" alt=""><button>SOP 2,2</button></a><br>
+        <a href="https://sanaullah2005.github.io/Sop2-3/" width="40%" alt=""><button>SOP 2,3</button></a><br>
+        <a href="https://sanaullah2005.github.io/Sop3-1/" width="40%" alt=""><button>SOP 3,1</button></a><br>
+        <a href="https://sanaullah2005.github.io/Sop3-2/" width="40%" alt=""><button>SOP 3,2</button></a><br>
+        <a href="https://sanaullah2005.github.io/Sop3-3/" width="40%" alt=""><button>SOP 3,3</button></a><br>
     </div>
 </body>
 </html>
